# pandapower

./: .codacy.yml  .coveragerc  .coveralls.yml  .coverargc  .gitattributes  .gitignore  .install_julia.sh  .install_pycall.py  .readthedocs.yml  .travis.yml  4_bus_Unbalanced_values.py  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CITATION.bib  CONTRIBUTING.rst  LICENSE  LICENSE.txt  MANIFEST.in  Power Factory Comparison.xlsx  README.rst  Unbalanced Harmonic Analysis.rar  Verification of Y bus.py  changes.rst  installation.rst  juliapkg.json  main.py  mypy.ini  pandapower.rar  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_branch_b_g.py  tox.ini
.github/ISSUE_TEMPLATE/: blank-template.md  blank_template.yaml  bug_report.md  bug_report.yaml  config.yaml  config.yml  feature_request.md  feature_request.yaml
.github/workflows/: github_test_action.yml  release.yml  test_release.yml  upload_release.yml
doc/: Makefile  about.rst  about_latex.rst  conf.py  contingency.rst  control.rst  converter.rst  elements.rst  estimation.rst  fileIO.csv  file_io.rst  format.json  getting_started.rst  gridequivalent.rst  group.rst  index.rst  latex_index.rst  motor.rst  networks.rst  opf.rst  plotting.rst  powerflow.rst  protection.rst  requirements.txt  shortcircuit.rst  std_types.rst  std_types_latex.rst  timeseries.rst  toolbox.rst  topology.rst  tutorials.rst
doc/about/: authors.rst  bus.csv  changelog.rst  citing.rst  contributing.rst  contributions.rst  deprecating.rst  introduction.rst  license.rst  nameing1.csv  nameing2.csv  pandapower_2bus_system.py  tests.rst  tolerances.csv  units.rst  update.rst  update20.rst  update30.rst  what.rst
doc/control/: building_a_controller.rst  cascade_control.rst  control_loop.rst  controller.rst  run.rst  timeseries.rst  tutorials.rst
doc/converter/: cgmes.rst  jao-converter.csv  jao.rst  matpower.rst  powerfactory.rst  pp2sincal.rst  pypower.rst  ucte.rst
doc/elements/: asymmetric_load.rst  asymmetric_load_par.csv  asymmetric_sgen.rst  asymmetric_sgen_par.csv  asymmetric_sgen_res.csv  b2b_vsc.json  b2b_vsc.rst  b2b_vsc_par.csv  b2b_vsc_res.csv  bus.rst  bus_dc.rst  bus_dc.sxe  bus_dc_geo.csv  bus_dc_par.csv  bus_dc_res.csv  bus_geo.csv  bus_par.csv  bus_res.csv  bus_res_3ph.csv  bus_res_sc.csv  dcline.rst  dcline1.sxe  dcline2.sxe  dcline_par.csv  dcline_res.csv  empty_network.rst  ext_grid.rst  ext_grid_optional.csv  ext_grid_par.csv  ext_grid_res.csv  ext_grid_res_3ph.csv  gen.rst  gen_opf.csv  gen_par.csv  gen_q_capability_characteristic.csv  gen_q_capability_curve_table.csv  gen_q_char_table.csv  gen_q_char_table_object.csv  gen_res.csv  group.rst  (+85 more)
doc/getting_started/: download.rst  installation.rst  installation_anaconda.rst  installation_develop.rst  installation_python.rst  installation_scratch.rst  installation_without_pip.rst  introduction.rst  pandapower_3bus_system.py  tutorials.rst  ~$$pandapower_loadflow.~vsdx
doc/gridequivalent/: gridequivalent_example.rst  gridequivalent_overview.rst  run_function.rst  tutorials.rst
doc/networks/: 3phase_grids.rst  advanced.rst  cigre.rst  dickert.csv  dickert_lv_networks.rst  example.rst  ieee.rst  kerber.csv  kerber.rst  kerber_extreme.csv  mv_oberrhein.rst  power_system_test_cases.rst  random.rst  simbench.rst  simple.rst  synthetic_voltage_control_lv_networks.rst  test.rst
doc/opf/: formulation.rst  known_problems.rst  opf_constraints.csv  opf_flexibility.csv  opf_ready_nets.csv  pandamodels.rst  powermodels.rst  pypower_run.rst
doc/pandapower/: about.rst  about_advantages.rst  api_create.rst  api_std_types.rst  api_toolbox.rst  elements.rst  getting_started.rst  loadflow_caveats.rst  loadflow_run.rst  networks.rst  networks_mv_oberrhein.rst  networks_test.rst  plotting.rst  plotting_generic.rst  toolbox.rst  topology.rst
doc/pics/: 2bus-system.pptx  3bus-system.pptx  pandapower_datastructure.vsdx  pandapower_powerflow.vsdx  pandapower_results.vsdx  pandapower_topology.vsdx  ~$$pandapower_datastructure.~vsdx  ~$$pandapower_dc_powerflor.~vsdx  ~$$pandapower_optimal_powerflow.~vsdx  ~$$pandapower_powerflow.~vsdx  ~$$pandapower_results.~vsdx  ~$$pandapower_topology.~vsdx
doc/plotting/: collections.rst  create_colormaps.rst  geo.rst  html.rst  simple_plot.rst
doc/powerflow/: ac.rst  ac_3ph.rst  caveats.rst  dc.rst  dcopf.rst  diagnostic.rst  opf.rst  opf_constraints.csv  (+2 more)
docs/: conf.py  index.rst  make.bat
pandapower/: .coverage  __init__.py  _version.py  auxiliary.py  build_branch.py  build_bus.py  build_gen.py  build_opf.py  convert_format.py  create.py  dcopf.py  diagnostic.py  diagnostic_reports.py  file_io.py  group.py  groups.py  html.py  html_net.py  idx_area.py  idx_brch.py  idx_bus.py  idx_bus_3ph.py  idx_cost.py  io_utils.py  linetypes.json  main.py  make_objective.py  network.py  network_structure.py  oberrhein.p  opf.py  optimal_powerflow.py  pd2ppc.py  pd2ppc_zero.py  postgresql_io.py  powerflow.py  pp_types.py  results.py  results_branch.py  results_bus.py  (+24 more)
pandapower.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
report/: author_page.blg  author_page.tex  landscape.aux  latex_postprocessing.py
tutorials/: Buses_Clustering_5.xlsx  Cigre_MV_network_modified  DER_control_tutorial.ipynb  DER_control_tutorial.py  FACTS.ipynb  FACTS_SVC.ipynb  Kurzschlussberechnung.ipynb  Multinetze.ipynb  Netzerstellung_Wiederholung_pandapipes.ipynb  Standardbibliothek.ipynb  Tap dependent impedance.ipynb  Untitled.ipynb  Working with GeoJSON.ipynb  building_a_controller.ipynb  bus_groups_5.xlsx  buses_clustering_5.xlsx  cim2pp.ipynb  cluster_plotly.py  contingency_analysis.ipynb  control_loop.ipynb  control_loop2.ipynb  control_loop_de.ipynb  convergence_powerflow.ipynb  converter_powerfactory.ipynb  converter_pp2sincal.ipynb  create_advanced.html  create_advanced.ipynb  create_simple.html  create_simple.ipynb  data_analysis.html  data_analysis.ipynb  debug.ipynb  diagnostic.html  diagnostic.ipynb  distributed_slack.ipynb  ein_einfaches_netz_erstellen.ipynb  ein_einfaches_netz_erstellen_pandapipes.ipynb  grid_equivalents.ipynb  grid_equivalents_workarounds.ipynb  group.ipynb  (+89 more)
(+3938 files in other folders)
